<?xml version="1.0"?>
<package>
  <name>op3_kinematics_dynamics</name>
  <version>0.1.0</version>
  <description>The op3_kinematics_dynamics package</description>

  <maintainer email="hjsong@robotis.com">jay song</maintainer>

  <license>BSD</license>

  <author email="hjsong@robotis.com">jay song</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>robotis_math</run_depend>
  <run_depend>cmake_modules</run_depend>

  <export>
  </export>
</package>
