<?xml version="1.0"?>
<package>
  <name>op3_kinematics_dynamics</name>
  <version>0.1.0</version>
  <description>The op3_kinematics_dynamics package</description>
  <license>Apache License 2.0</license>
  <author email="hjsong@robotis.com">jay song</author>
  <author email="kmjung@robotis.com">kayman</author>
  <author email="sch@robotis.com">sch</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>cmake_modules</build_depend>  
  <run_depend>roscpp</run_depend>
  <run_depend>robotis_math</run_depend>
  <run_depend>cmake_modules</run_depend>
</package>
