<?xml version="1.0"?>
<package>
  <name>op3_kinematics_dynamics</name>
  <version>0.1.1</version>
  <description>The op3_kinematics_dynamics package</description>
  <license>Apache License 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <author email="hjsong@robotis.com">Jay Song</author>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3</url>
  <url type="website">http://wiki.ros.org/robotis_op3</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>cmake_modules</build_depend>  
  <run_depend>roscpp</run_depend>
  <run_depend>robotis_math</run_depend>
  <run_depend>cmake_modules</run_depend>
</package>
