<?xml version="1.0"?>
<package>
  <name>op3_localization</name>
  <version>0.0.0</version>
  <description>The op3_localization package</description>

  <author email="sch@robotis.com">sch</author>
  <maintainer email="sch@robotis.com">sch</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>eigen_conversions</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
