<?xml version="1.0"?>
<package format="2">
  <name>op3_localization</name>
  <version>0.2.1</version>
  <description>
    The op3_localization package
  </description>
  <license>Apache 2.0</license>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/op3_localization</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/op3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>tf</depend>
  <depend>eigen_conversions</depend>
  <depend>robotis_math</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
</package>
